# whitch1

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
fonts/: yoster_license.txt
gfx/: bg.aseprite  enemies.aseprite  objects.aseprite  whitch_design.aseprite
maps/: bg.tsx
maps/levels/: level1.tmx  level2.tmx
music/: crawl.xm
palettes/: graveyard-mist-gba.aseprite
src/: actor.rs  backgrounds.rs  behaviors.rs  close_to_zero.rs  entity.rs  game.rs  level.rs  lib.rs  main.rs  resources.rs  sfx.rs  util.rs
