[package]
name = "whitch"
version = "0.1.0"
authors = ["Nathan Jent"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.20"
agb_tracker = { version = "0.20", features = [ "xm" ] }
slotmap = { version = "1", default-features = false }

[build-dependencies]
quote = "1"
proc-macro2 = "1"
tiled = { version = "0.12", default-features = false }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
